Persistent nodes (#332)