@@ -43,34 +43,39 @@ import net.consensys.orion.http.handler.send.SendHandler;
 import net.consensys.orion.http.handler.sendraw.SendRawHandler;
 import net.consensys.orion.http.handler.upcheck.UpcheckHandler;
 import net.consensys.orion.http.server.vertx.HttpErrorHandler;
-import net.consensys.orion.network.ConcurrentNetworkNodes;
 import net.consensys.orion.network.NetworkDiscovery;
+import net.consensys.orion.network.PersistentNetworkNodes;
 import net.consensys.orion.payload.DistributePayloadManager;
 import net.consensys.orion.storage.EncryptedPayloadStorage;
 import net.consensys.orion.storage.JpaEntityManagerProvider;
-import net.consensys.orion.storage.OrionSQLKeyValueStore;
 import net.consensys.orion.storage.PrivacyGroupStorage;
 import net.consensys.orion.storage.QueryPrivacyGroupStorage;
 import net.consensys.orion.storage.Sha512_256StorageKeyBuilder;
 import net.consensys.orion.storage.Storage;
 import net.consensys.orion.storage.StorageKeyBuilder;
+import net.consensys.orion.storage.StorageUtils;
+import net.consensys.orion.storage.Store;
 import net.consensys.orion.utils.TLS;
 
 import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.PrintStream;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.security.Security;
+import java.util.ArrayList;
+import java.util.List;
 import java.util.Properties;
 import java.util.Scanner;
 import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.function.Function;
 import javax.annotation.Nullable;
 
 import io.vertx.core.AsyncResult;
@@ -87,10 +92,15 @@ import io.vertx.ext.web.handler.LoggerHandler;
 import io.vertx.ext.web.handler.ResponseContentTypeHandler;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
+import org.apache.tuweni.bytes.Bytes;
 import org.apache.tuweni.crypto.sodium.Sodium;
+import org.apache.tuweni.io.Base64;
+import org.apache.tuweni.kv.EntityManagerKeyValueStore;
 import org.apache.tuweni.kv.KeyValueStore;
 import org.apache.tuweni.kv.LevelDBKeyValueStore;
 import org.apache.tuweni.kv.MapDBKeyValueStore;
+import org.apache.tuweni.kv.MapKeyValueStore;
+import org.apache.tuweni.kv.ProxyKeyValueStore;
 
 public class Orion {
 
@@ -106,7 +116,9 @@ public class Orion {
   }
 
   private final Vertx vertx;
-  private KeyValueStore storage;
+  private final List<JpaEntityManagerProvider> entityManagerFactories = new ArrayList<>();
+  private KeyValueStore<Bytes, Bytes> storage;
+  private KeyValueStore<Bytes, Bytes> knownNodesStorage;
   private NetworkDiscovery discovery;
   private HttpServer nodeHTTPServer;
   private HttpServer clientHTTPServer;
@@ -130,7 +142,7 @@ public class Orion {
 
   public static void configureRoutes(
       final Vertx vertx,
-      final ConcurrentNetworkNodes networkNodes,
+      final PersistentNetworkNodes networkNodes,
       final Enclave enclave,
       final Storage<EncryptedPayload> storage,
       final Storage<PrivacyGroupPayload> privacyGroupStorage,
@@ -171,7 +183,7 @@ public class Orion {
 
     clientRouter.get("/upcheck").produces(TEXT.httpHeaderValue).handler(new UpcheckHandler());
     clientRouter.get("/peercount").produces(TEXT.httpHeaderValue).handler(
-        new PeerCountHandler(() -> networkNodes.nodeURLs().size()));
+        new PeerCountHandler(() -> networkNodes.nodeURIs().size()));
 
     clientRouter.post("/send").produces(JSON.httpHeaderValue).consumes(JSON.httpHeaderValue).handler(
         new SendHandler(distributePayloadManager));
@@ -293,6 +305,18 @@ public class Orion {
         log.error("Error closing storage", e);
       }
     }
+
+    if (knownNodesStorage != null) {
+      try {
+        knownNodesStorage.close();
+      } catch (final IOException e) {
+        log.error("Error closing node storage", e);
+      }
+    }
+
+    for (JpaEntityManagerProvider provider : entityManagerFactories) {
+      provider.close();
+    }
   }
 
   public void run(final PrintStream out, final PrintStream err, final String... args) {
@@ -316,10 +340,10 @@ public class Orion {
       return;
     }
 
-    run(out, err, config);
+    run(config, arguments.clearKnownNodes());
   }
 
-  public void run(final PrintStream out, final PrintStream err, final Config config) {
+  public void run(final Config config, final boolean clearKnownNodes) {
     final Path libSodiumPath = config.libSodiumPath();
     if (libSodiumPath != null) {
       Sodium.loadLibrary(libSodiumPath);
@@ -331,12 +355,21 @@ public class Orion {
     } catch (final IOException ex) {
       throw new OrionStartException(ex.getMessage(), ex);
     }
-    final ConcurrentNetworkNodes networkNodes = new ConcurrentNetworkNodes(config, keyStore.nodeKeys());
-
-    final Enclave enclave = new SodiumEnclave(keyStore);
 
     final Path workDir = config.workDir();
     log.info("using working directory {}", workDir);
+
+    // create our storage engine
+    storage = createStorage(config.storage(), workDir, "routerdb");
+    knownNodesStorage = createStorage(config.knownNodesStorage(), workDir, "nodedb");
+    if (clearKnownNodes) {
+      knownNodesStorage.clearAsync();
+    }
+
+    final PersistentNetworkNodes networkNodes =
+        new PersistentNetworkNodes(config, keyStore.nodeKeys(), StorageUtils.convertToPubKeyStore(knownNodesStorage));
+
+    final Enclave enclave = new SodiumEnclave(keyStore);
 
     try {
       Files.createDirectories(workDir);
@@ -379,9 +412,6 @@ public class Orion {
         throw new OrionStartException("Missing client TLS key file \"" + tlsClientKey + "\"");
       }
     }
-
-    // create our storage engine
-    storage = createStorage(config.storage(), workDir);
 
     // Vertx routers
     final Router nodeRouter = Router.router(vertx).exceptionHandler(log::error);
@@ -471,11 +501,10 @@ public class Orion {
       CompletableFuture.allOf(nodeFuture, clientFuture).get();
       // if there is not a node url in the config, then grab the actual port and use it to set the node url.
       if (!config.nodeUrl().isPresent()) {
-        networkNodes.setNodeUrl(
-            new URL("http", config.nodeNetworkInterface(), nodeHTTPServer.actualPort(), ""),
-            keyStore.nodeKeys());
+        URI nodeURI =
+            new URI("http", null, config.nodeNetworkInterface(), nodeHTTPServer.actualPort(), null, null, null);
+        networkNodes.setNodeUrl(nodeURI, keyStore.nodeKeys());
       }
-
       final CompletableFuture<Boolean> networkDiscoveryFuture = new CompletableFuture<>();
       // start network discovery of other peers
       discovery = new NetworkDiscovery(networkNodes, config);
@@ -487,7 +516,7 @@ public class Orion {
         }
       });
       CompletableFuture.allOf(networkDiscoveryFuture).get();
-    } catch (final ExecutionException | MalformedURLException e) {
+    } catch (final ExecutionException | URISyntaxException e) {
       throw new OrionStartException("Orion failed to start: " + e.getCause().getMessage(), e.getCause());
     } catch (final InterruptedException e) {
       throw new OrionStartException("Orion was interrupted while starting services");
@@ -514,7 +543,7 @@ public class Orion {
     try (final FileOutputStream fileOutputStream = new FileOutputStream(portsFile)) {
       properties.store(
           fileOutputStream,
-          "This file contains the ports used by the running instance of Pantheon. This file will be deleted after the node is shutdown.");
+          "This file contains the ports used by the running instance of Orion. This file will be deleted after the node is shutdown.");
     } catch (final Exception e) {
       log.warn("Error writing ports file", e);
     }
@@ -530,28 +559,37 @@ public class Orion {
     };
   }
 
-  private KeyValueStore createStorage(final String storage, final Path storagePath) {
-    String db = "routerdb";
+  private KeyValueStore<Bytes, Bytes> createStorage(final String storage, final Path storagePath, String dbName) {
     final String[] storageOptions = storage.split(":", 2);
     if (storageOptions.length > 1) {
-      db = storageOptions[1];
+      dbName = storageOptions[1];
     }
-
+    final Function<Bytes, Bytes> bytesIdentityFn = Function.identity();
     if (storage.toLowerCase().startsWith("mapdb")) {
-      try {
-        return MapDBKeyValueStore.open(storagePath.resolve(db));
-      } catch (final IOException e) {
-        throw new OrionStartException("Couldn't create MapDB store: " + db, e);
-      }
+      return MapDBKeyValueStore
+          .open(storagePath.resolve(dbName), bytesIdentityFn, bytesIdentityFn, bytesIdentityFn, bytesIdentityFn);
     } else if (storage.toLowerCase().startsWith("leveldb")) {
       try {
-        return LevelDBKeyValueStore.open(storagePath.resolve(db));
+        return LevelDBKeyValueStore.open(storagePath.resolve(dbName));
       } catch (final IOException e) {
-        throw new OrionStartException("Couldn't create LevelDB store: " + db, e);
+        throw new OrionStartException("Couldn't create LevelDB store: " + dbName, e);
       }
     } else if (storage.toLowerCase().startsWith("sql")) {
-      final JpaEntityManagerProvider jpaEntityManagerProvider = new JpaEntityManagerProvider(db);
-      return new OrionSQLKeyValueStore(jpaEntityManagerProvider);
+      final JpaEntityManagerProvider jpaEntityManagerProvider = new JpaEntityManagerProvider(dbName);
+      entityManagerFactories.add(jpaEntityManagerProvider);
+      return ProxyKeyValueStore.open(
+          EntityManagerKeyValueStore.open(jpaEntityManagerProvider::createEntityManager, Store.class, Store::getKey),
+          Base64::decode,
+          Base64::encode,
+          store -> Bytes.wrap(store.getValue()),
+          (Bytes key, Bytes value) -> {
+            Store store = new Store();
+            store.setKey(Base64.encode(key));
+            store.setValue(value.toArrayUnsafe());
+            return store;
+          });
+    } else if (storage.toLowerCase().equals("memory")) {
+      return MapKeyValueStore.open(new ConcurrentHashMap<>());
     } else {
       throw new OrionStartException("unsupported storage mechanism: " + storage);
     }
@@ -602,9 +640,5 @@ public class Orion {
 
   public int clientPort() {
     return clientHTTPServer.actualPort();
-  }
-
-  public void addPeer(final URL url) {
-    discovery.addPeer(url);
   }
 }
